# kernel_image_processing

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
codecs/: PBMCodec.cpp
core/: ImageContainer.cpp
examples/: example_1.pbm  example_1.ppm  p3_example_sprite.ppm  p4_example_0.pbm  p5_example_1.pgm  p6_example_0.ppm  p6_example_2.ppm  test2.ppm  test3.pbm  test3.pgm  test5.pgm  test_p3_edge_detection_3x3.ppm  test_p3_emboss.ppm  test_p3_laplacian_3x3.ppm  test_p3_low_pass.ppm  test_p3_unsharp_masking.ppm  test_p6.ppm  test_p6_blur.ppm  test_p6_box_blur_5x5.ppm  test_p6_edge_detection.ppm  test_p6_gaussian_blur.ppm  test_p6_gaussian_blur_5x5.ppm  test_p6_horizontal_edge_detection.ppm  test_p6_horizontal_sobel.ppm  test_p6_ridge_detection.ppm  test_p6_unsharp_masking_5x5.ppm  test_p6_vertical_edge_detection.ppm  test_p6_vertical_sobel.ppm
image_formats/: PBM.cpp  PBM.h  PNM.cpp  PNM.h
src/: MultiChannelImage.h  NetPBM_IO.cpp  NetPBM_IO.h  NetpbmIO.h  NetpbmImageFactory.cpp  NetpbmImageFactory.h  kernel.cpp  kernel.h  main.cpp  netPBM_io.h  test_utilities.hpp  types.h
src/codecs/: PBMCodec.h
src/core/: ImageContainer.cpp  ImageContainer.h  kernel.h  types.h
src/image_formats/: PBM.cpp  PBM.h  PNM.cpp  PNM.h  PPM.cpp  PPM.h
tests/: netpbm_factory_test.cpp  netpbm_io_tests.cpp  pbm_factory_test.cpp  pgm_factory_test.cpp  test_example.cpp
tmp/: netpbm_io_p4_test.ppm
